fix: check max size csv + refactor upload csv (#19)
* check max size upload file + API validation file + refactor

* refactor

* refactor

* build fix

* jUnit fix

* jUnit test fix

* code refactor

---------

Co-authored-by: andreaV95 <157486351+Vitolo-Andrea@users.noreply.github.com>
Co-authored-by: Vitolo-Andrea <andrea.vitolo@emeal.nttdata.com>